--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,12 @@ jobs:
           npm install
       - name: Production Build
         run: |
-          npm run build
+          npm run build:github
       - name: Unit Tests
         run: |
           npm run test
       - name: Deploy to Github Pages
-        uses: JamesIves/github-pages-deploy-action@3.5.9
+        uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           GITHUB_TOKEN: ${{ secrets.ACTION_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
